# chatoy-server

./: .gitignore  Cargo.toml  README.md
migration/src/: lib.rs  m20221221_000001_user.rs  m20221222_000002_session.rs  m20221222_000003_room.rs  m20221222_000004_member.rs
src/: channel.rs  main.rs  msg.rs  utils.rs  ws.rs
src/entities/: member.rs  mod.rs  prelude.rs  room.rs  session.rs  user.rs
src/routers/: mod.rs  room.rs  session.rs  user.rs
