[package]
name = "chatoy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
blake3 = "1.3.3"
serde = { version = "1.0.151", features = ["derive"] }
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["macros"] }
axum = "0.6.1"

[dependencies.sea-orm]
version = "0.10.5"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]
