[package]
name = "chatoy-server"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
anyhow = "1.0.68"
log = "0.4.17"
env_logger = "0.10.0"
blake3 = "1.3.3"
rand = "0.8.5"
uuid = "1.2.2"
chrono = "0.4.23"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["macros", "sync"] }
tower-http = { version = "0.3.5", features = ["cors"] }
axum = { version = "0.6.1", features = ["headers", "ws"] }

[dependencies.sea-orm]
version = "0.10.5"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]
